[gd_scene load_steps=4 format=3 uid="uid://dhxj656g2keaa"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_bp3ig"]
[ext_resource type="Script" path="res://Scripts/audio_options.gd" id="2_3s234"]
[ext_resource type="AudioStream" uid="uid://c5akum00ogh67" path="res://Assets/Audio/midnight-forest-184304.mp3" id="3_pv4th"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bp3ig")

[node name="AudioOptions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_3s234")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 3

[node name="MasterLabel" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Master"

[node name="MasterSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Sound Effects"

[node name="SFXSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="MusicLabel" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Music"

[node name="MusicSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="Confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 88.0
offset_right = 278.0
offset_bottom = 140.0
text = "Apply"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pv4th")

[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/MasterSlider" to="AudioOptions" method="_on_master_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/SFXSlider" to="AudioOptions" method="_on_sfx_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/MusicSlider" to="AudioOptions" method="_on_music_slider_mouse_exited"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
